Add userId to credentials